istiod mwc enableNamespacesByDefault should support custom namespaces

--- a/manifests/charts/istio-control/istio-discovery/files/gen-istio.yaml
+++ b/manifests/charts/istio-control/istio-discovery/files/gen-istio.yaml
@@ -177,6 +177,9 @@ data:
       "sidecarInjectorWebhook": {
         "alwaysInjectSelector": [],
         "enableNamespacesByDefault": false,
+        "excludeNamespaces": [
+          "istio-system"
+        ],
         "injectedAnnotations": {},
         "neverInjectSelector": [],
         "objectSelector": {
