--- a/manifests/charts/istiod-remote/files/gen-istiod-remote.yaml
+++ b/manifests/charts/istiod-remote/files/gen-istiod-remote.yaml
@@ -157,6 +157,9 @@ data:
       "sidecarInjectorWebhook": {
         "alwaysInjectSelector": [],
         "enableNamespacesByDefault": false,
+        "excludeNamespaces": [
+          "istio-system"
+        ],
         "injectedAnnotations": {},
         "neverInjectSelector": [],
         "objectSelector": {
